Finished tutorial; main remaining bug is the invisibility of camera icon when taking picture

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,17 @@
   object-fit: contain;
   height: 100px;
 }
+
+.app__body {
+  background: url("https://www.pngkey.com/png/full/859-8598072_picture-freeuse-library-silhouette-mobile-at-getdrawings-cell.png")
+    no-repeat center;
+  background-size: contain;
+  height: 400px;
+  width: 250px;
+  padding: 74px;
+}
+
+.app__bodyBackground {
+  background-color: white;
+  height: 400px;
+}
